<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp"
    android:paddingBottom="14dp"
    android:paddingTop="15dp"
    android:background="@drawable/calculator_gradient">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/calculator_show_history_btn"
        style="@style/CalculatorIcon"
        android:layout_gravity="end"
        android:src="@drawable/ic_show_history"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calculator_expression_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="34+36 ="
        android:layout_marginTop="16dp"
        android:scrollbars="horizontal"
        style="@style/CalculatorExpressionTextView"
      />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calculator_result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="70"
        android:layout_marginTop="13dp"
        android:scrollbars="horizontal"
        style="@style/CalculatorResultTextView"/>

    <GridLayout
        android:id="@+id/calculator_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="17dp"
        android:useDefaultMargins="true"
        android:columnCount="4"
        android:rowCount="5">

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_ac"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_brackets"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_divider"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_multiply"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton2" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_minus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton2" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_5"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_6"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_plus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton2" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_7"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_8"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton1" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_equals"
            android:layout_rowWeight="1"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            style="@style/CalculatorButton2" />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/calculator_btn_0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            style="@style/CalculatorButton1" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/calculator_btn_dot"
            tools:ignore="TextContrastCheck" />
    </GridLayout>

</LinearLayout>